# bag_parser

./: .gitignore  CMakeLists.txt  README.md  package.xml
data_logger/: CMakeLists.txt
data_logger/include/data_logger/: data_logger.hpp
data_logger/src/: data_logger.cpp
docker/: dockerfile  run_image.sh
include/data_logger/: data_logger.hpp
launch/: start_parser.launch
ros_data_logger/: CMakeLists.txt  package.xml
ros_data_logger/include/ros_data_logger/: ros_data_logger.hpp
ros_data_logger/src/: cloud_parser_node.cpp  image_parser_node.cpp  ros_data_logger.cpp
src/: data_logger.cpp  image_parser_node.cpp
